# waytator

./: .SRCINFO  .gitignore  PKGBUILD  README.md  flake.nix  meson.build
nix/: package.nix
scripts/: install.sh  screenshot-to-waytator.sh
src/: dev.faetalize.waytator.desktop  main.c  meson.build  waytator-canvas-input.c  waytator-canvas-layout.c  waytator-canvas-render.c  waytator-canvas-state.c  waytator-canvas.c  waytator-config.h.in  waytator-document.c  waytator-document.h  waytator-export.c  waytator-export.h  waytator-ocr.c  waytator-ocr.h  waytator-render.c  waytator-render.h  waytator-stroke.c  waytator-stroke.h  waytator-types.h  waytator-window-private.h  waytator-window.c  waytator-window.h  waytator.gresource.xml
src/ui/: style.css  window.ui
src/ui/icons/: index.theme
